Table users{
    id int [pk, increment] 
    name varchar(100) [not null]
    email varchar(100) [not null, unique]
    password varchar(255) [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}
Table categories{
    id int [pk, increment] 
    name varchar(100) [not null, unique]
    description text
    tipo enum('ingreso', 'gasto') [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}
Table flows{
    id int [pk, increment] 
    user_id int [not null, ref: > users.id]
    category_id int [not null, ref: > categories.id]
    amount decimal(10, 2) [not null]
    description text
    date datetime [not null]
    photo varchar(255)  
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table budgets{
    id int [pk, increment] 
    user_id int [not null, ref: > users.id]
    category_id int [not null, ref: > categories.id]
    allocated_amount decimal(10, 2) [not null]
    amount_spent decimal(10, 2) [not null]
    month int [not null]
    year int [not null] 
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}